// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Radios matches snapshot (via server): client 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <fieldset
      aria-describedby="example--hint"
      class="nhsuk-fieldset"
    >
      <legend
        class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
      >
        Have you changed your name?
      </legend>
      <div
        class="nhsuk-hint"
        id="example--hint"
      >
        This includes changing your last name or spelling your name differently
      </div>
      <div
        class="nhsuk-radios"
        data-module="nhsuk-radios"
        data-nhsuk-radios-init=""
        id="example"
      >
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-1"
            name="example"
            type="radio"
            value="yes"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-1"
            id="example-1--label"
          >
            Yes
          </label>
        </div>
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-2"
            name="example"
            type="radio"
            value="no"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-2"
            id="example-2--label"
          >
            No
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Radios matches snapshot (via server): server 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <fieldset
      aria-describedby="example--hint"
      class="nhsuk-fieldset"
    >
      <legend
        class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
      >
        Have you changed your name?
      </legend>
      <div
        class="nhsuk-hint"
        id="example--hint"
      >
        This includes changing your last name or spelling your name differently
      </div>
      <div
        class="nhsuk-radios"
        data-module="nhsuk-radios"
        id="example"
      >
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-1"
            name="example"
            type="radio"
            value="yes"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-1"
            id="example-1--label"
          >
            Yes
          </label>
        </div>
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-2"
            name="example"
            type="radio"
            value="no"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-2"
            id="example-2--label"
          >
            No
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Radios matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <fieldset
      aria-describedby="example--hint"
      class="nhsuk-fieldset"
    >
      <legend
        class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
      >
        Have you changed your name?
      </legend>
      <div
        class="nhsuk-hint"
        id="example--hint"
      >
        This includes changing your last name or spelling your name differently
      </div>
      <div
        class="nhsuk-radios"
        data-module="nhsuk-radios"
        data-nhsuk-radios-init=""
        id="example"
      >
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-1"
            name="example"
            type="radio"
            value="yes"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-1"
            id="example-1--label"
          >
            Yes
          </label>
        </div>
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-2"
            name="example"
            type="radio"
            value="no"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-2"
            id="example-2--label"
          >
            No
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Radios matches snapshot with HTML in props 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-form-group--error"
  >
    <fieldset
      aria-describedby="example--hint example--error-message"
      class="nhsuk-fieldset"
    >
      <legend
        class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
      >
        <h1
          class="nhsuk-fieldset__heading"
        >
          <span
            class="nhsuk-caption-l"
          >
            Example
          </span>
           Legend text
        </h1>
      </legend>
      <div
        class="nhsuk-hint"
        id="example--hint"
      >
        Hint text 
        <em>
          with HTML
        </em>
      </div>
      <span
        class="nhsuk-error-message"
        id="example--error-message"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Error:
        </span>
         
        Error text 
        <em>
          with HTML
        </em>
      </span>
      <div
        class="nhsuk-radios"
        data-module="nhsuk-radios"
        data-nhsuk-radios-init=""
        id="example"
      >
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-1"
            name="example"
            type="radio"
            value="yes"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-1"
            id="example-1--label"
          >
            Yes
          </label>
        </div>
        <div
          class="nhsuk-radios__item"
        >
          <input
            class="nhsuk-radios__input"
            id="example-2"
            name="example"
            type="radio"
            value="no"
          />
          <label
            class="nhsuk-label nhsuk-radios__label"
            for="example-2"
            id="example-2--label"
          >
            No
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
